--- a/plugin.yml
+++ b/plugin.yml
@@ -4,3 +4,6 @@ version: 1.0.0
 api: 4.0.0
 author: RealYXNG
 description: A Secure and Safe way to run commands in your server easily.
+
+depend:
+  - DiscordBot
